Handbook plugin: Ensure proper spacing within callouts also apply for single-line shortcodes rendered via shortcode blocks.
For single-line shortcodes added via the shortcode block, the efforts of `wpautop()` appear to be stripped prior to display so spacing should not rely on presence of any 'p' tags.
 
Props dilipbheda, dufresnesteven, coffee2code.
Fixes #4936. 


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9407 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/plugins/handbook/stylesheets/callout-boxes.css
+++ b/wordpress.org/public_html/wp-content/plugins/handbook/stylesheets/callout-boxes.css
@@ -1,5 +1,5 @@
 .callout {
-  padding: 1em 3em 1em 3.7em;
+  padding: 1.5em 3em 1.6em 3.7em;
   margin-bottom: 1.5em;
   overflow: auto;
   position: relative;
@@ -8,11 +8,14 @@
   min-width: 170px;
 }
 .callout p {
-  margin-bottom: 0.6em !important;
-  margin-top: 0.5em !important;
+  margin-bottom: 0.6em;
+  margin-top: 0.5em;
 }
-.callout p ~ p {
-  margin-top: 1em;
+.callout p:first-child {
+  margin-top: 0;
+}
+.callout p:last-child {
+  margin-bottom: 0;
 }
 .callout:before {
   content: "";
